include command debug for yii2

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yiisoft/yii2-debug",
+    "name": "yiisoft/yii2-debug-extra",
     "description": "The debugger extension for the Yii framework",
     "keywords": [
         "yii2",
